Setup sqlite database

--- a/Patrick-T-Assignment-2/appsettings.json
+++ b/Patrick-T-Assignment-2/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDatabase": "Data source=database.db"
+  }
 }
