--- a/Patrick-T-Assignment-2/appsettings.json
+++ b/Patrick-T-Assignment-2/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AppDatabase": "Data source=database.db"
-  }
+  "AllowedHosts": "*"
 }
